# spowerwk

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  pytest.ini  requirements.txt
.github/workflows/: build.yml
docs/spec/: spec202604251836.md
docs/superpowers/plans/: 2026-05-09-ghost-reboot-lan-discovery-sensitivity.md
docs/superpowers/specs/: 2026-05-12-auto-discover-nodes-design.md
pdb/: pdb2json.py  pdb_download.py
src/hook/: dllmain.cpp
src/installer/: install.py
src/service/: config.json  crypto.py  hardware.py  injector.py  main.py  p2p.py
tests/: test_crypto.py  test_p2p.py
